@@ -1,9 +1,10 @@
-CHANGELOG -- $Id: changelog 118 2006-12-20 14:45:37Z shred $
+CHANGELOG -- $Id: changelog 121 2007-03-28 14:10:41Z shred $
 
 R14
   * Added EmptyTableModel
   * Added PhpSerializer
   * Napkin L&F added to the JLAFSelector (http://napkinlaf.sourceforge.net/)
+  * JToolbarButton constructor now also supports button titles.
 
 R13 (2006-07-26)
   * Removed all JDK1.3 compatibilty code.
